--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "crypto-js": "^4.1.1",
+    "type": "module",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.2"
