--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-router": "^5.2.0",
