--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "buffer": "^6.0.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cropperjs": "^1.5.13",
     "data-uri-to-buffer": "^4.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
