--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,11 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "cropperjs": "^1.5.13",
+    "datatables": "^1.10.18",
     "datatables.net": "^1.13.4",
+    "datatables.net-buttons": "^2.3.6",
+    "datatables.net-buttons-dt": "^2.3.6",
+    "datatables.net-dt": "^1.13.4",
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
@@ -46,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/datatables.net-buttons": "^1.4.7"
   }
 }
