--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-<<<<<<< HEAD
-/node_modules
-=======
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+/frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -24,4 +22,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
->>>>>>> 9e676515cd150ee29e1f6145b8938e3b5240992e
