--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "datatables": "^1.10.18",
     "datatables.net": "^1.13.4",
     "datatables.net-buttons": "^2.3.6",
+    "datatables.net-buttons-bs4": "^2.3.6",
     "datatables.net-buttons-dt": "^2.3.6",
     "datatables.net-dt": "^1.13.4",
     "jquery": "^3.6.4",
