--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "datatables.net-buttons-bs4": "^2.3.6",
     "datatables.net-buttons-dt": "^2.3.6",
     "datatables.net-dt": "^1.13.4",
+    "datatables.net-responsive": "^2.4.1",
     "jquery": "^3.6.4",
     "jszip": "^3.10.1",
     "pdfmake": "^0.2.7",
